--- a/index.html
+++ b/index.html
@@ -103,33 +103,73 @@
                 <ul class="team-list list">
                     <li class="team-item">
                         <img src="./images/imgteam1.jpg" alt="Employee image"/>
-                    <div class="team-aside">
-                        <h3 class="team-title">Mark Guerrero</h3>
-                        <p class="team-subtitle">Product Designer</p>
-                    </div>
-                    </li>
-                    <li class="team-item">
-                        <img src="./images/imgteam2.jpg" alt="Employee image"/>
-                    <div class="team-aside">
-                        <h3 class="team-title">Tom Ford</h3>
-                        <p class="team-subtitle">Frontend Developer</p>
-                    </div>
-                    </li>
-                    <li class="team-item">
-                        <img src="./images/imgteam3.jpg" alt="Employee image"/>
-                    <div class="team-aside">
-                        <h3 class="team-title">Camila Garcia</h3>
-                        <p class="team-subtitle">Marketing</p>
-                    </div>
-                    </li>
-                    <li class="team-item">
-                        <img src="./images/imgteam4.jpg" alt="Employee image"/>
-                    <div class="team-aside">
-                        <h3 class="team-title">Daniel Wilson</h3>
-                        <p class="team-subtitle">UI Designer</p>
-                    </div>
-                    </li>
+            <div class="team-aside">
+                <h3 class="team-title">Mark Guerrero</h3>
+                <p class="team-subtitle">Product Designer</p>
+                <ul class="team-soc-list list">
+                    <li class="team-soc-item"><a href="" class="team-link link">
+                        <svg class="team-soc-icon" width="16" height="16">
+                            <use href="./images/icons.svg#icon-instagram"></use>
+                        </svg>
+                    </a></li>
+                    <li class="team-soc-item"><a href="" class="team-link link">
+                        <svg class="team-soc-icon">
+                            <use href="./images/icons.svg#icon-twitter-1"></use>
+                        </svg>
+                    </a></li>
+                    <li class="team-soc-item"><a href="" class="team-link link">
+                        <svg class="team-soc-icon">
+                            <use href="./images/icons.svg#icon-facebook-1"></use>
+                        </svg>
+                    </a></li>
+                    <li class="team-soc-item"><a href="" class="team-link link">
+                        <svg class="team-soc-icon">
+                            <use href="./images/icons.svg#icon-linkedin"></use>
+                        </svg>
+                    </a></li>
                 </ul>
+            </div>
+                </li>
+                <li class="team-item">
+                    <img src="./images/imgteam2.jpg" alt="Employee image"/>
+            <div class="team-aside">
+                <h3 class="team-title">Tom Ford</h3>
+                <p class="team-subtitle">Frontend Developer</p>
+                <ul class="team-soc-list list">
+                    <li class="team-soc-item"><a href="" class="team-link link"></a></li>
+                    <li class="team-soc-item"><a href="" class="team-link link"></a></li>
+                    <li class="team-soc-item"><a href="" class="team-link link"></a></li>
+                    <li class="team-soc-item"><a href="" class="team-link link"></a></li>
+                </ul>
+            </div>
+                </li>
+                <li class="team-item">
+                    <img src="./images/imgteam3.jpg" alt="Employee image"/>
+            <div class="team-aside">
+                <h3 class="team-title">Camila Garcia</h3>
+                <p class="team-subtitle">Marketing</p>
+                <ul class="team-soc-list list">
+                    <li class="team-soc-item"><a href="" class="team-link link"></a></li>
+                    <li class="team-soc-item"><a href="" class="team-link link"></a></li>
+                    <li class="team-soc-item"><a href="" class="team-link link"></a></li>
+                    <li class="team-soc-item"><a href="" class="team-link link"></a></li>
+                </ul>
+            </div>
+                </li>
+                <li class="team-item">
+                    <img src="./images/imgteam4.jpg" alt="Employee image"/>
+            <div class="team-aside">
+                <h3 class="team-title">Daniel Wilson</h3>
+                <p class="team-subtitle">UI Designer</p>
+                <ul class="team-soc-list list">
+                    <li class="team-soc-item"><a href="" class="team-link link"></a></li>
+                    <li class="team-soc-item"><a href="" class="team-link link"></a></li>
+                    <li class="team-soc-item"><a href="" class="team-link link"></a></li>
+                    <li class="team-soc-item"><a href="" class="team-link link"></a></li>
+                </ul>
+            </div>
+                </li>
+            </ul>
             </div>
         </section>
     </main>
