--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
                 <ul class="team-soc-list list">
                     <li class="team-soc-item"><a href="" class="team-link link">
                         <svg class="team-soc-icon" width="16" height="16">
-                            <use href="./images/icons.svg#icon-instagram"></use>
+                            <use href="./images/icons.svg#icon-instagram-2"></use>
                         </svg>
                     </a></li>
                     <li class="team-soc-item"><a href="" class="team-link link">
@@ -124,7 +124,7 @@
                     </a></li>
                     <li class="team-soc-item"><a href="" class="team-link link">
                         <svg class="team-soc-icon">
-                            <use href="./images/icons.svg#icon-linkedin"></use>
+                            <use href="./images/icons.svg#icon-linkedin-1"></use>
                         </svg>
                     </a></li>
                 </ul>
