--- a/index.html
+++ b/index.html
@@ -107,22 +107,27 @@
                 <h3 class="team-title">Mark Guerrero</h3>
                 <p class="team-subtitle">Product Designer</p>
                 <ul class="team-soc-list list">
-                    <li class="team-soc-item"><a href="" class="team-link link">
+                    <li class="team-soc-item">
+                        <a class="team-soc-link link" href="">
                         <svg class="team-soc-icon" width="16" height="16">
                             <use href="./images/icons.svg#icon-instagram-2"></use>
                         </svg>
-                    </a></li>
-                    <li class="team-soc-item"><a href="" class="team-link link">
+                    </a>
+                </li>
+                    <li class="team-soc-item">
+                        <a class="team-soc-link link" href="">
                         <svg class="team-soc-icon">
                             <use href="./images/icons.svg#icon-twitter-1"></use>
                         </svg>
                     </a></li>
-                    <li class="team-soc-item"><a href="" class="team-link link">
+                    <li class="team-soc-item">
+                        <a class="team-soc-link link" href="">
                         <svg class="team-soc-icon">
                             <use href="./images/icons.svg#icon-facebook-1"></use>
                         </svg>
                     </a></li>
-                    <li class="team-soc-item"><a href="" class="team-link link">
+                    <li class="team-soc-item">
+                        <a class="team-soc-link link" href="">
                         <svg class="team-soc-icon">
                             <use href="./images/icons.svg#icon-linkedin-1"></use>
                         </svg>
