--- a/index.html
+++ b/index.html
@@ -116,22 +116,25 @@
                 </li>
                     <li class="team-soc-item">
                         <a class="team-soc-link link" href="">
-                        <svg class="team-soc-icon">
+                        <svg class="team-soc-icon" width="16" height="16">
                             <use href="./images/icons.svg#icon-twitter-1"></use>
                         </svg>
-                    </a></li>
+                    </a>
+                </li>
                     <li class="team-soc-item">
                         <a class="team-soc-link link" href="">
-                        <svg class="team-soc-icon">
+                        <svg class="team-soc-icon" width="16" height="16">
                             <use href="./images/icons.svg#icon-facebook-1"></use>
                         </svg>
-                    </a></li>
+                    </a>
+                </li>
                     <li class="team-soc-item">
                         <a class="team-soc-link link" href="">
-                        <svg class="team-soc-icon">
+                        <svg class="team-soc-icon" width="16" height="16">
                             <use href="./images/icons.svg#icon-linkedin-1"></use>
                         </svg>
-                    </a></li>
+                    </a>
+                </li>
                 </ul>
             </div>
                 </li>
@@ -141,10 +144,33 @@
                 <h3 class="team-title">Tom Ford</h3>
                 <p class="team-subtitle">Frontend Developer</p>
                 <ul class="team-soc-list list">
-                    <li class="team-soc-item"><a href="" class="team-link link"></a></li>
-                    <li class="team-soc-item"><a href="" class="team-link link"></a></li>
-                    <li class="team-soc-item"><a href="" class="team-link link"></a></li>
-                    <li class="team-soc-item"><a href="" class="team-link link"></a></li>
+                    <li class="team-soc-item">
+                        <a class="team-soc-link link" href="">
+                        <svg class="team-soc-icon" width="16" height="16">
+                            <use href="./images/icons.svg#icon-instagram-2"></use>
+                        </svg>
+                        </a>
+                    </li>
+                    <li class="team-soc-item">
+                        <a class="team-soc-link link" href="">
+                        <svg class="team-soc-icon" width="16" height="16">
+                            <use href="./images/icons.svg#icon-twitter-1"></use>
+                        </svg>
+                        </a>
+                    </li>
+                    <li class="team-soc-item">
+                        <a class="team-soc-link link" href="">
+                        <svg class="team-soc-icon" width="16" height="16">
+                            <use href="./images/icons.svg#icon-facebook-1"></use>
+                        </svg>
+                        </a>
+                    </li>
+                    <li class="team-soc-item">
+                        <a class="team-soc-link link" href="">
+                        <svg class="team-soc-icon" width="16" height="16">
+                            <use href="./images/icons.svg#icon-linkedin-1"></use>
+                        </svg>
+                        </a></li>
                 </ul>
             </div>
                 </li>
@@ -154,10 +180,34 @@
                 <h3 class="team-title">Camila Garcia</h3>
                 <p class="team-subtitle">Marketing</p>
                 <ul class="team-soc-list list">
-                    <li class="team-soc-item"><a href="" class="team-link link"></a></li>
-                    <li class="team-soc-item"><a href="" class="team-link link"></a></li>
-                    <li class="team-soc-item"><a href="" class="team-link link"></a></li>
-                    <li class="team-soc-item"><a href="" class="team-link link"></a></li>
+                    <li class="team-soc-item">
+                        <a class="team-soc-link link" href="" >
+                        <svg class="team-soc-icon" width="16" height="16">
+                            <use href="./images/icons.svg#icon-instagram-2"></use>
+                        </svg>
+                        </a>
+                    </li>
+                    <li class="team-soc-item">
+                        <a class="team-soc-link link" href="" >
+                        <svg class="team-soc-icon" width="16" height="16">
+                            <use href="./images/icons.svg#icon-twitter-1"></use>
+                        </svg>
+                        </a>
+                    </li>
+                    <li class="team-soc-item">
+                        <a class="team-soc-link link" href="" >
+                        <svg class="team-soc-icon" width="16" height="16">
+                            <use href="./images/icons.svg#icon-facebook-1"></use>
+                        </svg>
+                        </a>
+                    </li>
+                    <li class="team-soc-item">
+                        <a class="team-soc-link link" href="" >
+                        <svg class="team-soc-icon" width="16" height="16">
+                            <use href="./images/icons.svg#icon-linkedin-1"></use>
+                        </svg>
+                    </a>
+                </li>
                 </ul>
             </div>
                 </li>
@@ -167,14 +217,76 @@
                 <h3 class="team-title">Daniel Wilson</h3>
                 <p class="team-subtitle">UI Designer</p>
                 <ul class="team-soc-list list">
-                    <li class="team-soc-item"><a href="" class="team-link link"></a></li>
-                    <li class="team-soc-item"><a href="" class="team-link link"></a></li>
-                    <li class="team-soc-item"><a href="" class="team-link link"></a></li>
-                    <li class="team-soc-item"><a href="" class="team-link link"></a></li>
+                    <li class="team-soc-item">
+                        <a class="team-soc-link link" href="" >
+                        <svg class="team-soc-icon" width="16" height="16">
+                            <use href="./images/icons.svg#icon-instagram-2"></use>
+                        </svg>
+                        </a>
+                    </li>
+                    <li class="team-soc-item">
+                        <a class="team-soc-link link" href="" >
+                        <svg class="team-soc-icon" width="16" height="16">
+                            <use href="./images/icons.svg#icon-twitter-1"></use>
+                        </svg>
+                        </a>
+                    </li>
+                    <li class="team-soc-item">
+                        <a class="team-soc-link link" href="" >
+                        <svg class="team-soc-icon" width="16" height="16">
+                            <use href="./images/icons.svg#icon-facebook-1"></use>
+                        </svg>
+                        </a>
+                    </li>
+                    <li class="team-soc-item">
+                        <a class="team-soc-link link" href="" >
+                        <svg class="team-soc-icon" width="16" height="16">
+                            <use href="./images/icons.svg#icon-linkedin-1"></use>
+                        </svg>
+                        </a>
+                    </li>
                 </ul>
             </div>
                 </li>
             </ul>
+            </div>
+        </section>
+        <!-- CUSTOMERS -->
+        <section class="client">
+            <div>
+                <h2 class="client-titl">Customers</h2>
+                <ul class="client-soc-list list">
+                    <li class="client-soc-item">
+                        <a class="client-soc-link link"href="">
+
+                        </a>
+                    </li>
+                    <li class="client-soc-item">
+                        <a class="client-soc-link link"href="">
+
+                        </a>
+                    </li>
+                    <li class="client-soc-item">
+                        <a class="client-soc-link link"href="">
+
+                        </a>
+                    </li>
+                    <li class="client-soc-item">
+                        <a class="client-soc-link link"href="">
+
+                        </a>
+                    </li>
+                    <li class="client-soc-item">
+                        <a class="client-soc-link link"href="">
+
+                        </a>
+                    </li>
+                    <li class="client-soc-item">
+                        <a class="client-soc-link link"href="">
+
+                        </a>
+                    </li>
+                </ul>
             </div>
         </section>
     </main>
