--- a/index.html
+++ b/index.html
@@ -51,6 +51,13 @@
         <div class="container">
         <ul class="feature-list list">
             <li class="feature-item">
+            <div class="feature-soc-list list">
+                <a class="feature-soc-link" href="">
+                    <svg class="feature-soc-icon" width="64" height="64">
+                        <use hreff="./images/feature1.svg#icon-antenna-1"></use>
+                    </svg>
+                </a>
+            </div>
                 <h3 class="feature-title">Strategy</h3>
                 <p class="feature-subtitle">
                     Our goal is to identify the business
@@ -58,12 +65,26 @@
                 </p>
             </li>
             <li class="feature-item">
+            <div class="feature-soc-list list">
+                <a class="feature-soc-link" href="">
+                    <svg class="feature-soc-icon" width="64" height="64">
+                        <use hreff="./images/feature1.svg#icon-clock-1"></use>
+                    </svg>
+                </a>
+            </div>
                 <h3 class="feature-title">Punctuality</h3>
                 <p class="feature-subtitle">
                     Bring the key message to the brand's audience for the best price within the shortest possible time.
                 </p>
             </li>
             <li class="feature-item">
+            <div class="feature-soc-list list">
+                <a class="feature-soc-link" href="">
+                    <svg class="feature-soc-icon" width="64" height="64">
+                        <use hreff="./images/feature1.svg#icon-diagram-1"></use>
+                    </svg>
+                </a>
+            </div>
                 <h3 class="feature-title">Diligence</h3>
                 <p class="feature-subtitle">
                     Research and confirm brands that present the strongest digital growth opportunities and minimize
@@ -71,6 +92,13 @@
                 </p>
             </li>
             <li class="feature-item">
+            <div class="feature-soc-list list">
+                <a class="feature-soc-link" href="">
+                    <svg class="feature-soc-icon" width="64" height="64">
+                        <use hreff="./images/feature1.svg#icon-astronaut-1"></use>
+                    </svg>
+                </a>
+            </div>
                 <h3 class="feature-title">Technologies</h3>
                 <p class="feature-subtitle">
                     Design practice focused on digital experiences. We bring forth a deep passion for problem-solving.
@@ -253,40 +281,53 @@
         </section>
         <!-- CUSTOMERS -->
         <section class="client">
-            <div>
+            <div class="container">
                 <h2 class="client-titl">Customers</h2>
+            <div class="client-aside">
                 <ul class="client-soc-list list">
                     <li class="client-soc-item">
                         <a class="client-soc-link link"href="">
-
+                        <svg class="client-soc-icon" width="104" height="56">
+                            <use href="./images/client.svg#icon-Logo"></use>
+                        </svg>                    
                         </a>
                     </li>
                     <li class="client-soc-item">
                         <a class="client-soc-link link"href="">
-
+                        <svg class="client-soc-icon" width="104" height="56">
+                            <use href="./images/client.svg#icon-Logo-1"></use>
+                        </svg>
                         </a>
                     </li>
                     <li class="client-soc-item">
                         <a class="client-soc-link link"href="">
-
+                        <svg class="client-soc-icon" width="104" height="56">
+                            <use href="./images/client.svg#icon-Logo-2"></use>
+                        </svg>
                         </a>
                     </li>
                     <li class="client-soc-item">
                         <a class="client-soc-link link"href="">
-
+                        <svg class="client-soc-icon" width="104" height="56">
+                            <use href="./images/client.svg#icon-Logo-3"></use>
+                        </svg>
                         </a>
                     </li>
                     <li class="client-soc-item">
                         <a class="client-soc-link link"href="">
-
+                        <svg class="client-soc-icon" width="104" height="56">
+                            <use href="./images/client.svg#icon-Logo-4"></use>
+                        </svg>
                         </a>
                     </li>
                     <li class="client-soc-item">
                         <a class="client-soc-link link"href="">
-
+                        <svg class="client-soc-icon" width="104" height="56">
+                            <use href="./images/client.svg#icon-Logo-5"></use></svg>
                         </a>
                     </li>
                 </ul>
+            </div>    
             </div>
         </section>
     </main>
