--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
             <div class="feature-soc-list list">
                 <a class="feature-soc-link" href="">
                     <svg class="feature-soc-icon" width="64" height="64">
-                        <use hreff="./images/feature1.svg#icon-antenna-1"></use>
+                        <use href="./images/feature1.svg#icon-antenna-1"></use>
                     </svg>
                 </a>
             </div>
@@ -68,7 +68,7 @@
             <div class="feature-soc-list list">
                 <a class="feature-soc-link" href="">
                     <svg class="feature-soc-icon" width="64" height="64">
-                        <use hreff="./images/feature1.svg#icon-clock-1"></use>
+                        <use href="./images/feature1.svg#icon-clock-1"></use>
                     </svg>
                 </a>
             </div>
@@ -81,7 +81,7 @@
             <div class="feature-soc-list list">
                 <a class="feature-soc-link" href="">
                     <svg class="feature-soc-icon" width="64" height="64">
-                        <use hreff="./images/feature1.svg#icon-diagram-1"></use>
+                        <use href="./images/feature1.svg#icon-diagram-1"></use>
                     </svg>
                 </a>
             </div>
@@ -95,7 +95,7 @@
             <div class="feature-soc-list list">
                 <a class="feature-soc-link" href="">
                     <svg class="feature-soc-icon" width="64" height="64">
-                        <use hreff="./images/feature1.svg#icon-astronaut-1"></use>
+                        <use href="./images/feature1.svg#icon-astronaut-1"></use>
                     </svg>
                 </a>
             </div>
@@ -334,9 +334,45 @@
     <!-- FOOTER -->
     <footer class="footer">
         <div class="container">
-                <a href="./index.html" class="logo link">Web<span class="logos link">Studio</span></a>
+            <div class="footer-wrap">
+            <a href="./index.html" class="logo link">Web<span class="logos link">Studio</span></a>
             <p class="content">Increase the flow of customers and sales for your business with digital marketing & growth solutions.
             </p>
+            <h3 class="footer-title">Social media</h3>
+        </div>
+        <div class="footer-aside">
+            
+            <ul class="footer-soc-list list">
+                <li class="footer-soc-item">
+                    <a class="footer-soc-link link" href="">
+                    <svg>
+                    <use></use>
+                    </svg>
+                    </a>
+                </li>
+                <li class="footer-soc-item">
+                    <a class="footer-soc-link link" href="">
+                    <svg>
+                    <use></use>
+                    </svg>
+                    </a>
+                </li>
+                <li class="footer-soc-item">
+                    <a class="footer-soc-link link" href="">
+                    <svg>
+                    <use></use>
+                    </svg>
+                    </a>
+                </li>
+                <li class="footer-soc-item">
+                    <a class="footer-soc-link link" href="">
+                    <svg>
+                    <use></use>
+                    </svg>
+                    </a>
+                </li>
+            </ul>
+        </div>
         </div>
     </footer>     
 </body>
