--- a/index.html
+++ b/index.html
@@ -333,46 +333,45 @@
     </main>
     <!-- FOOTER -->
     <footer class="footer">
-        <div class="container">
+        <div class="container-bottom">
             <div class="footer-wrap">
-            <a href="./index.html" class="logo link">Web<span class="logos link">Studio</span></a>
-            <p class="content">Increase the flow of customers and sales for your business with digital marketing & growth solutions.
-            </p>
-            <h3 class="footer-title">Social media</h3>
-        </div>
-        <div class="footer-aside">
-            
-            <ul class="footer-soc-list list">
-                <li class="footer-soc-item">
-                    <a class="footer-soc-link link" href="">
-                    <svg>
-                    <use></use>
-                    </svg>
-                    </a>
-                </li>
-                <li class="footer-soc-item">
-                    <a class="footer-soc-link link" href="">
-                    <svg>
-                    <use></use>
-                    </svg>
-                    </a>
-                </li>
-                <li class="footer-soc-item">
-                    <a class="footer-soc-link link" href="">
-                    <svg>
-                    <use></use>
-                    </svg>
-                    </a>
-                </li>
-                <li class="footer-soc-item">
-                    <a class="footer-soc-link link" href="">
-                    <svg>
-                    <use></use>
-                    </svg>
-                    </a>
-                </li>
-            </ul>
-        </div>
+                <a href="./index.html" class="logo link">Web<span class="logos link">Studio</span></a>
+                <p class="content">Increase the flow of customers and sales for your business with digital marketing & growth solutions.
+                </p>
+            </div>
+            <div class="footer-aside">
+                <h3 class="footer-title">Social media</h3>
+                <ul class="footer-soc-list list">
+                    <li class="footer-soc-item">
+                        <a class="footer-soc-link link" href="">
+                        <svg class="footer-soc-icon" width="24" height="24">
+                        <use href="./images/footer.svg#icon-instagram-2"></use>
+                        </svg>
+                        </a>
+                    </li>
+                    <li class="footer-soc-item">
+                        <a class="footer-soc-link link" href="">
+                        <svg class="footer-soc-icon" width="24" height="24">
+                        <use href="./images/footer.svg#icon-twitter-1"></use>
+                        </svg>
+                        </a>
+                    </li>
+                    <li class="footer-soc-item">
+                        <a class="footer-soc-link link" href="">
+                        <svg class="footer-soc-icon" width="24" height="24">
+                        <use href="./images/footer.svg#icon-facebook-1"></use>
+                        </svg>
+                        </a>
+                    </li>
+                    <li class="footer-soc-item">
+                        <a class="footer-soc-link link" href="">
+                        <svg class="footer-soc-icon" width="24" height="24">
+                        <use href="./images/footer.svg#icon-linkedin-1"></use>
+                        </svg>
+                        </a>
+                    </li>
+                </ul>
+            </div>
         </div>
     </footer>     
 </body>
