--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
             <div class="feature-soc-list list">
                 <a class="feature-soc-link" href="">
                     <svg class="feature-soc-icon" width="64" height="64">
-                        <use href="./images/feature1.svg#icon-antenna-1"></use>
+                        <use href="./images/feature.svg#icon-antenna-1"></use>
                     </svg>
                 </a>
             </div>
@@ -68,7 +68,7 @@
             <div class="feature-soc-list list">
                 <a class="feature-soc-link" href="">
                     <svg class="feature-soc-icon" width="64" height="64">
-                        <use href="./images/feature1.svg#icon-clock-1"></use>
+                        <use href="./images/feature.svg#icon-clock-1"></use>
                     </svg>
                 </a>
             </div>
@@ -81,7 +81,7 @@
             <div class="feature-soc-list list">
                 <a class="feature-soc-link" href="">
                     <svg class="feature-soc-icon" width="64" height="64">
-                        <use href="./images/feature1.svg#icon-diagram-1"></use>
+                        <use href="./images/feature.svg#icon-diagram-1"></use>
                     </svg>
                 </a>
             </div>
@@ -95,7 +95,7 @@
             <div class="feature-soc-list list">
                 <a class="feature-soc-link" href="">
                     <svg class="feature-soc-icon" width="64" height="64">
-                        <use href="./images/feature1.svg#icon-astronaut-1"></use>
+                        <use href="./images/feature.svg#icon-astronaut-1"></use>
                     </svg>
                 </a>
             </div>
