--- a/portfolio.html
+++ b/portfolio.html
@@ -63,16 +63,14 @@
                 <!-- WORK -->       
             <ul class="work-list list">
                 <li class="work-item">
-                    <a href="" class="link">
+                    <a href="" class="work-link link">
                     <img src="./images/img1.jpg" alt="Work"/>
-                <div class="work-aside">
                     <h2 class="title-link">Banking App Interface Concept</h2>
                     <p class="subtitle-link">App</p>
-                </div>
                     </a>
                 </li>
                 <li class="work-item">
-                    <a href="" class="link">
+                    <a href="" class="work-link">
                     <img src="./images/img2.jpg" alt="Work"/>
                 <div class="work-aside">
                     <h2 class="title-link">Cashless Payment</h2>
@@ -81,7 +79,7 @@
                     </a>
                 </li>
                 <li class="work-item">
-                    <a href="" class="link">
+                    <a href="" class="work-link">
                     <img src="./images/img3.jpg" alt="Work"/>
                 <div class="work-aside">
                     <h2 class="title-link">Meditation App</h2>
@@ -90,7 +88,7 @@
                     </a>
                 </li>
                 <li class="work-item">
-                    <a href="" class="link">
+                    <a href="" class="work-link">
                     <img src="./images/img4.jpg" alt="Work"/>
                 <div class="work-aside">
                     <h2 class="title-link">Taxi Service</h2>
@@ -99,7 +97,7 @@
                     </a>
                 </li>
                 <li class="work-item">
-                    <a href="" class="link">
+                    <a href="" class="work-link">
                     <img src="./images/img5.jpg" alt="Work"/>
                 <div class="work-aside">
                     <h2 class="title-link">Screen Illustrations</h2>
@@ -108,7 +106,7 @@
                     </a>
                 </li>
                 <li class="work-item">
-                    <a href="" class="link">
+                    <a href="" class="work-link">
                     <img src="./images/img6.jpg" alt="Work"/>
                 <div class="work-aside">
                     <h2 class="title-link">Online Courses</h2>
@@ -117,7 +115,7 @@
                     </a>
                 </li>
                 <li class="work-item">
-                    <a href="" class="link">
+                    <a href="" class="work-link">
                     <img src="./images/img7.jpg" alt="Work"/>
                 <div class="work-aside">
                     <h2 class="title-link">Instagram Stories Concept</h2>
@@ -126,7 +124,7 @@
                     </a>
                 </li>
                 <li class="work-item">
-                    <a href="" class="link">
+                    <a href="" class="work-link">
                     <img src="./images/img8.jpg" alt="Work"/>
                 <div class="work-aside">
                     <h2 class="title-link">Organic Food</h2>
@@ -135,7 +133,7 @@
                     </a>
                 </li>
                 <li class="work-item">
-                    <a href="" class="link">
+                    <a href="" class="work-link">
                     <img src="./images/img9.jpg" alt="Work"/>
                 <div class="work-aside">
                     <h2 class="title-link">Fresh Coffee</h2>
@@ -148,14 +146,14 @@
         </section>
     </main>
     <footer class="footer">
-        <div class="container-bottom">
+        <div class="container container-bottom">
             <div class="footer-wrap">
                 <a href="./index.html" class="logo link">Web<span class="logos link">Studio</span></a>
                 <p class="content">Increase the flow of customers and sales for your business with digital marketing & growth solutions.
                 </p>
             </div>
             <div class="footer-aside">
-                <h3 class="footer-title">Social media</h3>
+                <p class="footer-title">Social media</p>
                 <ul class="footer-soc-list list">
                     <li class="footer-soc-item">
                         <a class="footer-soc-link link" href="">
