--- a/index.html
+++ b/index.html
@@ -51,12 +51,10 @@
         <div class="container">
         <ul class="feature-list list">
             <li class="feature-item">
-            <div class="feature-soc-list list">
-                <a class="feature-soc-link" href="">
-                    <svg class="feature-soc-icon" width="64" height="64">
-                        <use href="./images/feature.svg#icon-antenna-1"></use>
-                    </svg>
-                </a>
+            <div class="feature-container">
+                <svg class="feature-icon" width="64" height="64">
+                    <use href="./images/feature.svg#icon-antenna-1"></use>
+                </svg>
             </div>
                 <h3 class="feature-title">Strategy</h3>
                 <p class="feature-subtitle">
@@ -65,12 +63,10 @@
                 </p>
             </li>
             <li class="feature-item">
-            <div class="feature-soc-list list">
-                <a class="feature-soc-link" href="">
-                    <svg class="feature-soc-icon" width="64" height="64">
-                        <use href="./images/feature.svg#icon-clock-1"></use>
-                    </svg>
-                </a>
+            <div class="feature-container">
+                <svg class="feature-icon" width="64" height="64">
+                    <use href="./images/feature.svg#icon-clock-1"></use>
+                </svg>
             </div>
                 <h3 class="feature-title">Punctuality</h3>
                 <p class="feature-subtitle">
@@ -78,12 +74,10 @@
                 </p>
             </li>
             <li class="feature-item">
-            <div class="feature-soc-list list">
-                <a class="feature-soc-link" href="">
-                    <svg class="feature-soc-icon" width="64" height="64">
-                        <use href="./images/feature.svg#icon-diagram-1"></use>
-                    </svg>
-                </a>
+            <div class="feature-container">
+                <svg class="feature-icon" width="64" height="64">
+                    <use href="./images/feature.svg#icon-diagram-1"></use>
+                </svg>
             </div>
                 <h3 class="feature-title">Diligence</h3>
                 <p class="feature-subtitle">
@@ -92,12 +86,10 @@
                 </p>
             </li>
             <li class="feature-item">
-            <div class="feature-soc-list list">
-                <a class="feature-soc-link" href="">
-                    <svg class="feature-soc-icon" width="64" height="64">
-                        <use href="./images/feature.svg#icon-astronaut-1"></use>
-                    </svg>
-                </a>
+            <div class="feature-container">
+                <svg class="feature-icon" width="64" height="64">
+                    <use href="./images/feature.svg#icon-astronaut-1"></use>
+                </svg>
             </div>
                 <h3 class="feature-title">Technologies</h3>
                 <p class="feature-subtitle">
@@ -283,7 +275,6 @@
         <section class="client">
             <div class="container">
                 <h2 class="client-titl">Customers</h2>
-            <div class="client-aside">
                 <ul class="client-soc-list list">
                     <li class="client-soc-item">
                         <a class="client-soc-link link"href="">
@@ -333,14 +324,14 @@
     </main>
     <!-- FOOTER -->
     <footer class="footer">
-        <div class="container-bottom">
+        <div class="container container-bottom">
             <div class="footer-wrap">
                 <a href="./index.html" class="logo link">Web<span class="logos link">Studio</span></a>
                 <p class="content">Increase the flow of customers and sales for your business with digital marketing & growth solutions.
                 </p>
             </div>
             <div class="footer-aside">
-                <h3 class="footer-title">Social media</h3>
+                <p class="footer-title">Social media</p>
                 <ul class="footer-soc-list list">
                     <li class="footer-soc-item">
                         <a class="footer-soc-link link" href="">
