--- a/portfolio.html
+++ b/portfolio.html
@@ -65,8 +65,10 @@
                 <li class="work-item">
                     <a href="" class="work-link link">
                     <img src="./images/img1.jpg" alt="Work"/>
+                <div class="work-aside">
                     <h2 class="title-link">Banking App Interface Concept</h2>
                     <p class="subtitle-link">App</p>
+                </div>
                     </a>
                 </li>
                 <li class="work-item">
